--- a/loja.front/loja-front/src/styles/nav.css
+++ b/loja.front/loja-front/src/styles/nav.css
@@ -4,12 +4,30 @@
   }
   
   .topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .topnav div {
     float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+  }
+
+  .topnav h4 {
+    display: inline;
+  }
+
+  .topnav img {
+    height: 26px;
+    overflow: hidden;
   }
   
   .topnav a:hover {
@@ -21,3 +39,28 @@
     background-color: #04AA6D;
     color: white;
   }
+
+.topnav .search-container {
+  padding-left: 7%;
+}
+
+.topnav input[type=text] {
+  width: 55vw;
+  padding: 6px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
