feito a parte de login e registro e adicionado o styled components

--- a/loja.front/loja-front/src/styles/nav.css
+++ b/loja.front/loja-front/src/styles/nav.css
@@ -7,7 +7,7 @@
     float: right;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 16px !important;
     text-decoration: none;
     font-size: 17px;
   }
@@ -16,7 +16,6 @@
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
   }
@@ -41,20 +40,22 @@
   }
 
 .topnav .search-container {
-  padding-left: 7%;
+  padding-left: 7% !important;
 }
 
 .topnav input[type=text] {
-  width: 55vw;
+  width: 55vw !important;
   padding: 6px;
+  margin-top: 12px;
   font-size: 17px;
   border: none;
 }
 
 .topnav .search-container button {
   float: right;
-  padding: 6px;
-  margin-right: 16px;
+  padding: 6px !important;
+  margin-right: 16px !important;
+  margin-top: 12px;
   background: #ddd;
   font-size: 17px;
   border: none;
