--- a/loja.front/loja-front/src/styles/nav.css
+++ b/loja.front/loja-front/src/styles/nav.css
@@ -1,4 +1,4 @@
-.topnav {
+/* .topnav {
     overflow: hidden;
     background-color: #333;
   }
@@ -33,31 +33,32 @@
   .topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
+  } */
+
+/* 
   .topnav a.active {
     background-color: #04AA6D;
     color: white;
-  }
+  } */
 
-.topnav .search-container {
+/* .topnav .search-container {
   padding-left: 7% !important;
 }
 
 .topnav input[type=text] {
   width: 55vw !important;
   padding: 6px;
-  /* margin-top: 12px; */
+  /* margin-top: 12px; 
   font-size: 17px;
   border: none;
-}
+}*/
 
-.topnav .search-container button {
+/*.topnav .search-container button {
   float: right;
   padding: 6px !important;
   margin-right: 16px !important;
   /* margin-top: 12px; */
-  background: #ddd;
+  /*background: #ddd;
   font-size: 17px;
   border: none;
   cursor: pointer;
@@ -97,13 +98,32 @@
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+} */
+
+.show>.dropdown-menu {
+  display: block;
+  position: absolute;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
   background-color: #04AA6D;
 }
 
-.dropdown-content {
+.navbar input {
+  width: 40rem;
+  margin-left: 1% !important;
+}
+
+.navbar button {
+  margin-right: 1% !important;
+}
+
+.navbar img {
+  width: 100px;
+  height: 24px;
+}
+
+/* .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -127,4 +147,4 @@
 
 .show {
   display: block;
-}
+} */
